# Subwave

./: .env  .example.env  .gitignore  Cargo.toml  README.md  coverhelper.py  metadata.py
.cargo/: config.toml
queries/: createdb.sql  searchalbum.sql  searchsong.sql  upsertalbum.sql  upsertsong.sql
src/: api.rs  cors.rs  db.rs  lib.rs  login.rs  main.rs  models.rs  mods.rs  scanner.rs  server.rs
src/api/: cors.rs  endpoints.rs  login.rs  mod.rs  router.rs
src/mods/: cors.rs  db.rs  endpoints.rs  login.rs  mod.rs  models.rs  router.rs  scanner.rs
src/mods/queries/: createdb.sql  searchsong.sql
src/queries/: searchalbum.sql  upsert.sql  upsertsession.sql
tests/: tests.rs
