[package]
name = "flacend"
version = "0.1.0"
edition = "2021"

[dependencies]
# webserver shit
tokio = { version = "1.29", features = ["full"] }
tokio-util = "0.7.16"
hyper = { version = "0.14", features = ["full"] }

# audio backend (i want to use postgres but not sure how easy that is compared to sqlite)
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
lofty = "0.22.4"

# anyhow for errors
anyhow = "1.0.100"

# other file helpers
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3.2"

# auth helpers
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4.3"
argon2 = "0.5"