[package]
name = "Subwave"
version = "0.0.7"
edition = "2021"

[dependencies]
# webserver shit
tokio = { version = "1.29", default-features = false, features = ["rt-multi-thread", "macros", "fs"] } 
tokio-util = { version = "0.7.16", default-features = false, features = ["io"] }
axum = { version = "0.6", features = ["http1", "json", "query"] }
tower = { version = "0.4", default-features = false, features = ["limit"] }

# audio db (now actually using postgres)
# using runtime-tokio-rustls added fucking 20 deps. i may add this back but bruh
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio", "macros"] }
lofty = { version = "0.22.4", default-features = false, features = ["id3v2_compression_support"] }

# anyhow for errors
anyhow = "1.0.100"

# other file helpers
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3.2"

# auth helpers
argon2 = "0.5"
chrono = "0.4.42"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"]}
dotenvy = "0.15.7"